update the hero section image

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="container-fluid hero-content position-relative">
           <img src="image/logo.png" alt="Delmarva Power" class="hero-logo position-absolute" />
           <div class="hero-bottom-row position-relative w-100">
-            <img src="image/left-image.png" alt="Concerned couple" class="img-fluid hero-people" />
-            <img src="image/left-dialogue.png" alt="Customer quote" class="hero-bubble-left img-fluid" />
-            <img src="image/zoe-image.png" alt="Zoe" class="img-fluid hero-zoe" />
-            <img src="image/zoe-dialogue.png" alt="Zoe quote" class="hero-bubble-right img-fluid" />
+            <img src="image/left-image.png" alt="Concerned couple" class="img-fluid hero-people" id="heroLeftImage" />
+            <img src="image/left-dialogue.png" alt="Customer quote" class="hero-bubble-left img-fluid" id="heroLeftDialogue" />
+            <img src="image/zoe-image.png" alt="Zoe" class="img-fluid hero-zoe" id="heroZoeImage" />
+            <img src="image/zoe-dialogue.png" alt="Zoe quote" class="hero-bubble-right img-fluid" id="heroZoeDialogue" />
           </div>
         </div>
       </header>
