--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <!-- Hero Section -->
       <header class="hero-section bg-hero position-relative">
         <div class="container-fluid hero-content position-relative">
-          <img src="image/logo.png" alt="Delmarva Power" class="hero-logo position-absolute" />
+          <img src="image/dpl_logo.svg" alt="Delmarva Power logo" class="hero-logo position-absolute" />
           <div class="hero-bottom-row position-relative w-100">
             <img src="image/left-image.png" alt="Concerned couple" class="img-fluid hero-people" id="heroLeftImage" />
-            <img src="image/left-dialogue.png" alt="Customer quote" class="hero-bubble-left img-fluid" id="heroLeftDialogue" />
+            <img src="image/left-dialogue.svg" alt="Customer quote:'All I want is to enjoy my home without my costs soaring away.'" class="hero-bubble-left img-fluid" id="heroLeftDialogue" />
             <img src="image/zoe-image.png" alt="Zoe" class="img-fluid hero-zoe" id="heroZoeImage" />
-            <img src="image/zoe-dialogue.png" alt="Zoe quote" class="hero-bubble-right img-fluid" id="heroZoeDialogue" />
+            <img src="image/zoe-dialogue.svg" alt="Zoe, Your Good Energy Guide quote: 'You deserve a cozy happy home, and we have solutions to help ground your costs.'" class="hero-bubble-right img-fluid" id="heroZoeDialogue" />
           </div>
         </div>
       </header>
