--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <img src="image/zoe-dialogue.svg" alt="Zoe, Your Good Energy Guide quote: 'You deserve a cozy happy home, and we have solutions to help ground your costs.'" class="hero-bubble-right img-fluid" id="heroZoeDialogue" />
           </div>
         </div>
+        <!-- Mobile Animation Control Button -->
+        <div class="d-block d-lg-none text-center">
+          <button id="heroAnimControlBtn" class="btn btn-primary">Pause Animation</button>
+        </div>
       </header>
 
       <!-- First Section -->
