update the images

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="container-fluid hero-content position-relative">
           <img src="image/dpl_logo.svg" alt="Delmarva Power logo" class="hero-logo position-absolute" />
           <div class="hero-bottom-row position-relative w-100">
-            <img src="image/left-image.png" alt="Concerned couple" class="img-fluid hero-people" id="heroLeftImage" />
+            <img src="image/left-image.webp" alt="Concerned couple" class="img-fluid hero-people" id="heroLeftImage" />
             <img src="image/left-dialogue.svg" alt="Customer quote:'All I want is to enjoy my home without my costs soaring away.'" class="hero-bubble-left img-fluid" id="heroLeftDialogue" />
-            <img src="image/zoe-image.png" alt="Zoe" class="img-fluid hero-zoe" id="heroZoeImage" />
+            <img src="image/zoe-image.webp" alt="Zoe" class="img-fluid hero-zoe" id="heroZoeImage" />
             <img src="image/zoe-dialogue.svg" alt="Zoe, Your Good Energy Guide quote: 'You deserve a cozy happy home, and we have solutions to help ground your costs.'" class="hero-bubble-right img-fluid" id="heroZoeDialogue" />
           </div>
         </div>
@@ -55,7 +55,7 @@
       <!-- Parallax Image Section -->
       <section class="parallax-section" data-speed="0.7">
         <div class="container position-relative" style="height: 400px;">
-          <img src="image/parallax.png" alt="Parallax" class="parallax-img"  />
+          <img src="image/parallax.webp" alt="Parallax" class="parallax-img"  />
           <img src="image/parallal-dialogue.svg" alt="Parallax" class="parallax-img-2" />
         </div>
       </section>
@@ -97,7 +97,7 @@
                       <div class="tab-image-wrapper position-relative mb-3">
                         <div class="circle-image-container">
                           <div class="main-circle">
-                            <img src="image/family-room-img.png" alt="Main" />
+                            <img src="image/family-room-img.webp" alt="Main" />
                           </div>
                           <div class="orbit orbit-1"><div class="small-circle small-circle-1"></div></div>
                           <div class="orbit orbit-2"><div class="small-circle small-circle-2"></div></div>
@@ -231,7 +231,7 @@
                       <div class="tab-image-wrapper position-relative mb-3">
                         <div class="circle-image-container">
                           <div class="main-circle">
-                            <img src="image/kitchen-img.png" alt="Main" />
+                            <img src="image/kitchen-img.webp" alt="Main" />
                           </div>
                           <div class="orbit orbit-1"><div class="small-circle small-circle-1"></div></div>
                           <div class="orbit orbit-2"><div class="small-circle small-circle-2"></div></div>
@@ -332,7 +332,7 @@
                       <div class="tab-image-wrapper position-relative mb-3">
                            <div class="circle-image-container">
                           <div class="main-circle">
-                            <img src="image/laundry-room-img.png" alt="Main" />
+                            <img src="image/laundry-room-img.webp" alt="Main" />
                           </div>
                           <div class="orbit orbit-1"><div class="small-circle small-circle-1"></div></div>
                           <div class="orbit orbit-2"><div class="small-circle small-circle-2"></div></div>
@@ -433,7 +433,7 @@
                       <div class="tab-image-wrapper position-relative mb-3">
                           <div class="circle-image-container">
                           <div class="main-circle">
-                            <img src="image/garage-image.png" alt="Main" />
+                            <img src="image/garage-image.webp" alt="Main" />
                           </div>
                           <div class="orbit orbit-1"><div class="small-circle small-circle-1"></div></div>
                           <div class="orbit orbit-2"><div class="small-circle small-circle-2"></div></div>
@@ -524,7 +524,7 @@
                       <div class="tab-image-wrapper position-relative mb-3">
                           <div class="circle-image-container">
                           <div class="main-circle">
-                            <img src="image/basement-image.png" alt="Main" />
+                            <img src="image/basement-image.webp" alt="Main" />
                           </div>
                           <div class="orbit orbit-1"><div class="small-circle small-circle-1"></div></div>
                           <div class="orbit orbit-2"><div class="small-circle small-circle-2"></div></div>
@@ -634,7 +634,7 @@
             </div>
           </div>
           <div class="banner-img-wrapper position-relative mt-4 mt-md-0">
-            <img src="image/zoe-banner.png" alt="Zoe smiling" class="zoe-banner-img position-md-absolute" />
+            <img src="image/zoe-banner.webp" alt="Zoe smiling" class="zoe-banner-img position-md-absolute" />
           </div>
         </div>
       </section>
@@ -648,7 +648,7 @@
             </div>
             <div class="footer-logo-right d-flex flex-row align-items-center gap-4">
               <img src="image/empower-maryland.svg" alt="EmPOWER Maryland logo" class="footer-logo-img" />
-              <img src="image/energy-star.png" alt="Energy Star logo" class="footer-logo-img" />
+              <img src="image/energy-star.webp" alt="Energy Star logo" class="footer-logo-img" />
             </div>
           </div>
           <div class="footer-legal text-start small">
