remove section parallax effects on mobile

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </header>
 
       <!-- First Section -->
-      <section class="py-5 bg-white first-section" data-speed="0.8">
+      <section class="py-5 pb-0 pb-lg-3 bg-white first-section" data-speed="0.8">
         <div class="container">
           <h2 class="first-headline text-center text-lg-start pt-4">Explore simple cost-saving tips and programs that can put energy efficiency within reach.</h2>
           <div class="row align-items-center">
@@ -61,7 +61,7 @@
       </section>
 
       <!-- Another Section -->
-      <section class="tabbed-section py-3 pb-5 bg-white" data-speed="1.2">
+      <section class="tabbed-section py-5 py-lg-3 pb-5 bg-white" data-speed="1.2">
         <div class="container">
           <!-- Dropdown for mobile -->
           <div class="tab-dropdown-wrapper d-block d-md-none mb-3" style="position: relative;">
