remove footer accordion

--- a/index.html
+++ b/index.html
@@ -658,8 +658,11 @@
             <div class="footer-empower mb-3">
               EmPOWER Maryland programs are funded by a charge on your energy bill. EmPOWER programs can help you reduce your energy consumption and save you money. To learn more about EmPOWER and how you can participate, <a href="https://energy.maryland.gov/pages/facts/empower.aspx" target="_blank">click here</a>.
             </div>
+            <div class="footer-empower mb-0">
+               The EmPOWER Maryland charge funds programs that can help you reduce your energy consumption and greenhouse gas emissions and save you money. Since the inception of the EmPOWER Maryland program in 2008, the programs have saved $14.5 billion on installed measures at a cost of $4.1 billion. In addition to new program costs, this charge includes paying off the uncollected costs that were accrued over time by programs required by the EmPOWER statute and authorized by the Commission. In accordance with House Bill 864, the uncollected amounts will be fully paid by the end of 2032.
+            </div>
             <!-- EmPOWER Maryland Detail Accordion -->
-            <div class="accordion footer-accordion mb-3" id="empowerDetailAccordion">
+            <!-- <div class="accordion footer-accordion mb-3" id="empowerDetailAccordion">
               <div class="accordion-item border-0">
                 <h2 class="accordion-header" id="empowerDetailHeader">
                   <button class="accordion-button collapsed p-0 bg-transparent shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#empowerDetailCollapse" aria-expanded="false" aria-controls="empowerDetailCollapse">
@@ -672,7 +675,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
             <div class="footer-copyright">
               &copy; Delmarva Power & Light Company, 2025
             </div>
