--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                             </h2>
                             <div id="laundryCollapseFour" class="accordion-collapse collapse" aria-labelledby="laundryHeadingFour" role="region" data-bs-parent="#laundryAccordion">
                               <div class="accordion-body">
-                              <a href="https://homeenergysavings.delmarva.com/md/residential/appliance-rebate-program/washers-discounts" target="_blank">Instant discounts of $100 on ENERGY STAR certified clothes washers</a> can make it easier.</a>
+                              <a href="https://homeenergysavings.delmarva.com/md/residential/appliance-rebate-program/washers-discounts" target="_blank">Instant discounts of $100 on ENERGY STAR<sup>®</sup> certified clothes washers</a> can make it easier.</a>
                               </div>
                             </div>
                           </div>
@@ -589,7 +589,7 @@
                             </h2>
                             <div id="basementCollapseThree" class="accordion-collapse collapse" aria-labelledby="basementHeadingThree" role="region" data-bs-parent="#basementAccordion">
                               <div class="accordion-body">
-                               It's easy with <a href="https://homeenergysavings.delmarva.com/md/residential/appliance-rebate-program" target="_blank">$1,600 rebates on ENERGY STAR<sup>®</sup> certified heat pump water heaters</a>.
+                               It's easy with <a href="https://homeenergysavings.delmarva.com/md/residential/appliance-rebate-program" target="_blank">$1,600 rebates on ENERGY STAR certified heat pump water heaters</a>.
                               </div>
                             </div>
                           </div>
@@ -601,7 +601,7 @@
                             </h2>
                             <div id="basementCollapseFour" class="accordion-collapse collapse" aria-labelledby="basementHeadingFour" role="region" data-bs-parent="#basementAccordion">
                               <div class="accordion-body">
-                               That could mean higher costs. <a href="https://homeenergysavings.delmarva.com/md/residential/hvac-efficiency-program/overview" target="_blank">A no-cost HVAC Tune-up</a> can have your system running smoothly in no time.
+                               That could mean higher costs. <a href="https://homeenergysavings.delmarva.com/md/residential/hvac-efficiency-program/overview" target="_blank">A no-cost HVAC tune-up</a> can have your system running smoothly in no time.
                               </div>
                             </div>
                           </div>
@@ -653,7 +653,8 @@
           </div>
           <div class="footer-legal text-start small">
             <div class="footer-disclaimer mb-3 d-flex align-items-center">
-              <span>*Source: <a href="https://energy.gov" target="_blank">energy.gov</a> <span class="ms-3">†Source: </span><a href="https://energystar.gov" target="_blank">energystar.gov</a></span>
+              <span>*Source: <a href="https://energy.gov" target="_blank">energy.gov</a> 
+              <!-- <span class="ms-3">†Source: </span><a href="https://energystar.gov" target="_blank">energystar.gov</a> --></span>
             </div>
             <div class="footer-empower mb-3">
               EmPOWER Maryland programs are funded by a charge on your energy bill. EmPOWER programs can help you reduce your energy consumption and save you money. To learn more about EmPOWER and how you can participate, <a href="https://energy.maryland.gov/pages/facts/empower.aspx" target="_blank">click here</a>.
