text change and image adjustments based on feedback

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="row align-items-center">
             <div class="col-lg-7 mb-4 mb-lg-0">
               <p class="first-subheadline">These days, it may feel harder and harder to keep up, let alone get ahead. That's why we're here: to help make saving energy easier with simple programs made for everyday life. </p>
-              <p class="first-highlight">The best part? Although these are quick <br/>fixes, the results are everlasting.</p>
+              <p class="first-highlight">The best part? Although these are quick fixes, <br/>the results can last a long time.</p>
             </div>
             <div class="col-lg-5 text-center">
               <div class="gauge-wrapper" style="position: relative;">
@@ -73,7 +73,7 @@
               <ul class="dropdown-menu custom-dropdown-list w-100" aria-labelledby="roomDropdown">
                 <li><a class="dropdown-item active" href="#" data-tab="tab0">Your Family Room</a></li>
                 <li><a class="dropdown-item" href="#" data-tab="tab1">Your Kitchen</a></li>
-                <li><a class="dropdown-item" href="#" data-tab="tab2">Laundry Room</a></li>
+                <li><a class="dropdown-item" href="#" data-tab="tab2">Your Laundry Room</a></li>
                 <li><a class="dropdown-item" href="#" data-tab="tab3">Your Garage</a></li>
                 <li><a class="dropdown-item" href="#" data-tab="tab4">Your Basement</a></li>
               </ul>
@@ -84,7 +84,7 @@
           <ul class="nav nav-tabs justify-content-center tabbed-nav d-none d-md-flex" id="sectionTabs" role="tablist">
             <li class="nav-item" role="presentation"><button class="nav-link active" id="tab0-tab" data-bs-toggle="tab" data-bs-target="#tab0" type="button" role="tab" aria-controls="tab0" aria-selected="true">Your Family Room</button></li>
             <li class="nav-item" role="presentation"><button class="nav-link" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab" aria-controls="tab1" aria-selected="false">Your Kitchen</button></li>
-            <li class="nav-item" role="presentation"><button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab" aria-controls="tab2" aria-selected="false">Laundry Room</button></li>
+            <li class="nav-item" role="presentation"><button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab" aria-controls="tab2" aria-selected="false">Your Laundry Room</button></li>
             <li class="nav-item" role="presentation"><button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab" aria-controls="tab3" aria-selected="false">Your Garage</button></li>
             <li class="nav-item" role="presentation"><button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4" type="button" role="tab" aria-controls="tab4" aria-selected="false">Your Basement</button></li>
           </ul>
@@ -198,7 +198,7 @@
                             </h2>
                             <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" role="region" data-bs-parent="#familyRoomAccordion">
                               <div class="accordion-body">
-                                Get instant rebates on <a href="https://secure.delmarva.com/marketplace/category/dpl_advanced_power_solutions" target="_blank">advanced power strips</a> to keep your electronics from pulling power when you're not using them.
+                                Get instant rebates on <a href="https://secure.delmarva.com/marketplace/category/dpl_advanced_power_solutions" target="_blank">advanced power strips</a> to keep your electronics from pulling energy when you're not using them.
                               </div>
                             </div>
                           </div>
@@ -308,7 +308,7 @@
                             </h2>
                             <div id="kitchenCollapseFour" class="accordion-collapse collapse" aria-labelledby="kitchenHeadingFour" role="region" data-bs-parent="#kitchenAccordion">
                               <div class="accordion-body">
-                               Request a <a href="https://homeenergysavings.delmarva.com/md/residential/quick-home-energy-check-up-program" target="_blank">Quick Home Energy Check-Up</a>, and you'll get a custom energy efficiency report and maybe some no-cost products, too.
+                               Request a <a href="https://homeenergysavings.delmarva.com/md/residential/quick-home-energy-check-up-program" target="_blank">Quick Home Energy Check-up</a>, and you'll get a custom energy efficiency report and maybe some no-cost products, too.
                               </div>
                             </div>
                           </div>
@@ -360,7 +360,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="tab-content-area">
-                        <h2 class="tab-subtitle-small">Laundry Room</h2>
+                        <h2 class="tab-subtitle-small">Your Laundry Room</h2>
                         <h3 class="tab-title">Where socks go to disappear</h3>
                         <p class="tab-subtitle">It's where the laundry gets done, but a few smart moves here can clean up your energy use, too.</p>
                         <!-- Accordion Start -->
@@ -498,7 +498,7 @@
                             </h2>
                             <div id="garageCollapseThree" class="accordion-collapse collapse" aria-labelledby="garageHeadingThree" role="region" data-bs-parent="#garageAccordion">
                               <div class="accordion-body">
-                               Speaking of which, that outdated second refrigerator could cost you $80 or more every year to run. The good news? 
+                               Speaking of which, that outdated freezer or second refrigerator could cost you $80 or more every year to run.<sup>†</sup> The good news? 
                                <a href="https://homeenergysavings.delmarva.com/md/residential/appliance-recycling-program" target="_blank">Recycling it is easy</a>.
                               </div>
                             </div>
@@ -577,7 +577,7 @@
                             </h2>
                             <div id="basementCollapseTwo" class="accordion-collapse collapse" aria-labelledby="basementHeadingTwo" role="region" data-bs-parent="#basementAccordion">
                               <div class="accordion-body">
-                               Setting your water heater to 120 degrees should be hot enough for showers and washing.
+                               Setting your water heater to 120 degrees Fahrenheit should be hot enough for showers and washing.
                               </div>
                             </div>
                           </div>
@@ -654,7 +654,7 @@
           <div class="footer-legal text-start small">
             <div class="footer-disclaimer mb-3 d-flex align-items-center">
               <span>*Source: <a href="https://energy.gov" target="_blank">energy.gov</a> 
-              <!-- <span class="ms-3">†Source: </span><a href="https://energystar.gov" target="_blank">energystar.gov</a> --></span>
+              <span class="ms-3">†Source: </span><a href="https://energystar.gov" target="_blank">energystar.gov</a></span>
             </div>
             <div class="footer-empower mb-3">
               EmPOWER Maryland programs are funded by a charge on your energy bill. EmPOWER programs can help you reduce your energy consumption and save you money. To learn more about EmPOWER and how you can participate, <a href="https://energy.maryland.gov/pages/facts/empower.aspx" target="_blank">click here</a>.
