update the hero section

--- a/index.html
+++ b/index.html
@@ -21,16 +21,10 @@
       <header class="hero-section bg-hero position-relative">
         <div class="container-fluid hero-content position-relative">
           <img src="image/dpl_logo.svg" alt="Delmarva Power logo" class="hero-logo position-absolute" />
-          <div class="hero-bottom-row position-relative w-100">
-            <img src="image/left-image.webp" alt="Concerned couple" class="img-fluid hero-people" id="heroLeftImage" />
-            <img src="image/left-dialogue.svg" alt="Customer quote:'All I want is to enjoy my home without my costs soaring away.'" class="hero-bubble-left img-fluid" id="heroLeftDialogue" />
-            <img src="image/zoe-image.webp" alt="Zoe" class="img-fluid hero-zoe" id="heroZoeImage" />
-            <img src="image/zoe-dialogue.svg" alt="Zoe, Your Good Energy Guide quote: 'You deserve a cozy happy home, and we have solutions to help ground your costs.'" class="hero-bubble-right img-fluid" id="heroZoeDialogue" />
-          </div>
-        </div>
-        <!-- Mobile Animation Control Button -->
-        <div class="d-block d-lg-none text-center">
-          <button id="heroAnimControlBtn" class="ready-for-btn small">Pause Animation</button>
+          <!-- Desktop Hero Image -->
+          <img src="image/hero-desktop.webp" alt="Hero desktop image" class="hero-desktop-img d-none d-md-block" />
+          <!-- Mobile Hero Image -->
+          <img src="image/hero-mobile.webp" alt="Hero mobile image" class="hero-mobile-img d-block d-md-none" />
         </div>
       </header>
 
