fix the hero image issue

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="container-fluid hero-content position-relative">
           <img src="image/dpl_logo.svg" alt="Delmarva Power logo" class="hero-logo position-absolute" />
           <!-- Desktop Hero Image -->
-          <img src="image/hero-desktop.webp" alt="Hero desktop image" class="hero-desktop-img d-none d-md-block" />
+          <img src="image/hero-desktop.webp" alt="A concerned couple stands on the left, with the man scratching his head and the woman crossing her arms. A purple speech bubble reads: All I want is to enjoy my home without my energy costs soaring away. On the right, Zoe, the Good Energy Guide, smiles and gives two thumbs up beside the text: You deserve a comfy home. That’s why we offer solutions to help ground those costs." class="hero-desktop-img d-none d-md-block" />
           <!-- Mobile Hero Image -->
-          <img src="image/hero-mobile.webp" alt="Hero mobile image" class="hero-mobile-img d-block d-md-none" />
+          <img src="image/hero-mobile.webp" alt="Zoe, the Good Energy Guide, smiles and gives two thumbs up while wearing a blue blouse. A purple speech bubble shows a customer’s message: All I want is to enjoy my home without my energy costs soaring away. Below it, Zoe’s message reads: You deserve a cozy, comfy home, and we have solutions to help ground your costs." class="hero-mobile-img d-block d-md-none" />
         </div>
       </header>
 
