--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
                         </div>
                         <!-- Accordion End -->
                         <!-- Ready for more ideas row -->
-                        <!-- <div class="ready-for-row">
+                        <div class="ready-for-row">
                           <span class="ready-for-text">Ready for more ideas?</span>
                           <a href="https://www.delmarva.com/ways-to-save/for-your-home/maryland" class="ready-for-btn" target="_blank">Let's Go! <i class="fa-solid fa-arrow-right" style="font-size: 1.5rem; vertical-align: middle;"></i></a>
-                        </div> -->
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -312,10 +312,10 @@
                         </div>
                         <!-- Accordion End -->
                         <!-- Ready for more ideas row -->
-                        <!-- <div class="ready-for-row">
+                        <div class="ready-for-row">
                           <span class="ready-for-text">Ready for more ideas?</span>
                           <a href="https://www.delmarva.com/ways-to-save/for-your-home/maryland" class="ready-for-btn" target="_blank">Let's Go! <i class="fa-solid fa-arrow-right" style="font-size: 1.5rem; vertical-align: middle;"></i></a>
-                        </div> -->
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -413,10 +413,10 @@
                         </div>
                         <!-- Accordion End -->
                         <!-- Ready for more ideas row -->
-                        <!-- <div class="ready-for-row">
+                        <div class="ready-for-row">
                           <span class="ready-for-text">Ready for more ideas?</span>
                           <a href="https://www.delmarva.com/ways-to-save/for-your-home/maryland" class="ready-for-btn" target="_blank">Let's Go! <i class="fa-solid fa-arrow-right" style="font-size: 1.5rem; vertical-align: middle;"></i></a>
-                        </div> -->
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -504,10 +504,10 @@
                         </div>
                         <!-- Accordion End -->
                         <!-- Ready for more ideas row -->
-                        <!-- <div class="ready-for-row">
+                        <div class="ready-for-row">
                           <span class="ready-for-text">Ready for more ideas?</span>
                           <a href="https://www.delmarva.com/ways-to-save/for-your-home/maryland" class="ready-for-btn" target="_blank">Let's Go! <i class="fa-solid fa-arrow-right" style="font-size: 1.5rem; vertical-align: middle;"></i></a>
-                        </div> -->
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -606,7 +606,10 @@
                         </div>
                         <!-- Accordion End -->
                         <!-- Ready for more ideas row -->
-                       
+                       <div class="ready-for-row">
+                          <span class="ready-for-text">Ready for more ideas?</span>
+                          <a href="https://www.delmarva.com/ways-to-save/for-your-home/maryland" class="ready-for-btn" target="_blank">Let's Go! <i class="fa-solid fa-arrow-right" style="font-size: 1.5rem; vertical-align: middle;"></i></a>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -619,13 +622,10 @@
 
       <!-- Banner Section -->
       <section class="custom-banner-section position-relative overflow-visible">
-        <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between position-relative">
-          <div class="banner-text text-md-start text-center pt-3 pb-3">
-            <h2 class="banner-headline fw-bold mb-3">This is just the beginning!</h2>
-            <div class="d-flex flex-column flex-md-row align-items-center justify-content-between">
-            <p class="banner-subtext me-md-3">Check out even more ways to save energy and keep your costs down.</p>
-            <a href="https://www.delmarva.com/ways-to-save/for-your-home/maryland" class="ready-for-btn mt-3 mb-3 mt-md-0 mb-md-0" target="_blank">Let's Go! <i class="fa-solid fa-arrow-right" style="font-size: 1.5rem; vertical-align: middle;"></i></a>
-            </div>
+        <div class="container d-flex align-items-md-center justify-content-between position-relative">
+          <div class="banner-text text-start pt-3 pb-3">
+            <h2 class="banner-headline mb-0">Discover what a Quick Home Energy Check-up looks like in real life.</h2>
+            <a href="https://www.delmarva.com/ways-to-save/for-your-home/maryland" class="mt-3 mb-3 mt-md-0 mb-md-0 see-for-yourself-link" target="_blank"><span>See For Yourself</span> <i class="fa-solid fa-arrow-right see-for-yourself-icon"></i></a>
           </div>
           <div class="banner-img-wrapper position-relative mt-4 mt-md-0">
             <img src="image/zoe-banner.webp" alt="Zoe smiling" class="zoe-banner-img position-md-absolute" />
