--- a/DELMARVA-html--node--1251.html
+++ b/DELMARVA-html--node--1251.html
@@ -34,6 +34,8 @@
     <link rel="icon" type="image/x-icon" href="{{ current_base_url }}/themes/custom/icfbarrio/favicon.ico">
     <css-placeholder token="{{ placeholder_token|raw }}">
     <js-placeholder token="{{ placeholder_token|raw }}">
+    <!-- Path fixer - loads external script to fix all paths before page loads -->
+    <script src="js/fix-image-paths.js" type="text/javascript"></script>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <!-- Bootstrap CSS -->
@@ -721,8 +723,6 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js" type="text/javascript" nonce="{{ nonce_value }}"></script>
     <!-- Lottie Web Player -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js" type="text/javascript" nonce="{{ nonce_value }}"></script>
-    <!-- Fix image paths for local development -->
-    <script src="/js/fix-image-paths.js" type="text/javascript"></script>
 
     <script type="text/javascript" nonce="{{ nonce_value }}">
       window.addEventListener('load', function() {
